--- a/embed/file.html
+++ b/embed/file.html
@@ -258,23 +258,23 @@
         <a href='/{{ join "files" $.SitePrefix $.AssetDir $asset.Name }}'>view</a>
       </div>
       {{- end }}
-      <div class='flex items-center'>
-        <div class='mr2'><input id='{{ $asset.Name }}' type='checkbox' class='pointer'></div>
-        <label for='{{ $asset.Name }}' class='b'>{{ $asset.Name }}</label>
-        <span class='ml1 f6 mid-gray nowrap'>{{ fileSizeToString $asset.Size }}</span>
-        <details class='ml2 relative' data-autoclose-details>
-          <summary role='button' class='flex items-center button ba br2 b--black hide-marker ph1 pointer' data-disable-click-selection>
-            {{ template "octicons-triangle-down" }}
-          </summary>
-          <div class='absolute bg-white br2' style='top: calc(1rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-            <div class='ma2 tr'><a href=''>rename</a></div>
-            <div class='ma2'><button type='submit' formmethod='post' formaction='' name='name' value='' class='button ba br2 pa2 w-100'>insert</button></div>
-            <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 w-100'>cut</button></div>
-            <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/copy" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 w-100'>copy</button></div>
-            <div class='ma2'><button type='submit' formmethod='get' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $asset.Name }}' class='button-danger ba br2 b--dark-red pa2 w-100'>delete</button></div>
-          </div>
-        </details>
-      </div>
+      <!-- <div class='flex items-center'> -->
+      <!--   <div class='mr2'><input id='{{ $asset.Name }}' type='checkbox' class='pointer'></div> -->
+      <!--   <label for='{{ $asset.Name }}' class='b'>{{ $asset.Name }}</label> -->
+      <!--   <span class='ml1 f6 mid-gray nowrap'>{{ fileSizeToString $asset.Size }}</span> -->
+      <!--   <details class='ml2 relative' data-autoclose-details> -->
+      <!--     <summary role='button' class='flex items-center button ba br2 b--black hide-marker ph1 pointer' data-disable-click-selection> -->
+      <!--       {{ template "octicons-triangle-down" }} -->
+      <!--     </summary> -->
+      <!--     <div class='absolute bg-white br2' style='top: calc(1rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'> -->
+      <!--       <div class='ma2 tr'><a href=''>rename</a></div> -->
+      <!--       <div class='ma2'><button type='submit' formmethod='post' formaction='' name='name' value='' class='button ba br2 pa2 w-100'>insert</button></div> -->
+      <!--       <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 w-100'>cut</button></div> -->
+      <!--       <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/copy" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 w-100'>copy</button></div> -->
+      <!--       <div class='ma2'><button type='submit' formmethod='get' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $asset.Name }}' class='button-danger ba br2 b--dark-red pa2 w-100'>delete</button></div> -->
+      <!--     </div> -->
+      <!--   </details> -->
+      <!-- </div> -->
     </li>
     {{- end }}
   </ul>
