--- a/embed/file.html
+++ b/embed/file.html
@@ -243,31 +243,35 @@
     {{- range $asset := $.Assets }}
     <li class='h-100'>
       {{- if eq (ext $asset.Name) ".jpeg" ".jpg" ".png" ".webp" ".gif" }}
-      <label class='pointer' style='display: block; position: relative;'>
+      <label class='pointer' style='display: block; position: relative;' data-disable-click-selection>
         <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer' style='position: absolute; top: 4px; left: 4px;'>
         <img src='{{ imgURL $asset }}' class='w-100' loading='lazy'>
       </label>
       <div style='overflow-wrap: break-word;'>
-        <span class='b dib mr2 mb2'>{{ $asset.Name }}</span>
-        <a href='' class='dib mr2 mb2'>edit</a>
+        <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
+        <a href='' class='dib mr2 mb2'>view</a>
         <a href='' class='dib mr2 mb2'>rename</a>
         <button class='button ba br2 pa2 mr2 mb2'>cut</button>
         <button class='button ba br2 pa2 mr2 mb2'>copy</button>
         <button class='button-danger ba br2 b--dark-red pa2 mr2 mb2'>delete</button>
       </div>
       {{- else }}
-      <label class='pointer' style='display: block; position: relative;'>
-        <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer'>
-        <div class='dib' style='height: 200px; width: 200px'>{{ template "octicons-file-code" }}</div>
+      <label class='pointer' style='display: block; position: relative;' data-disable-click-selection>
+        <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer' style='position: absolute; top: 4px; left: 4px;'>
+        <div class='flex justify-center pv4'>
+          <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='50' height='50'>
+            <path d='M3 3a2 2 0 0 1 2-2h9.982a2 2 0 0 1 1.414.586l4.018 4.018A2 2 0 0 1 21 7.018V21a2 2 0 0 1-2 2H4.75a.75.75 0 0 1 0-1.5H19a.5.5 0 0 0 .5-.5V8.5h-4a2 2 0 0 1-2-2v-4H5a.5.5 0 0 0-.5.5v6.25a.75.75 0 0 1-1.5 0Zm12-.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 0-.146-.336l-4.018-4.018A.5.5 0 0 0 15 2.5Z'></path>
+            <path d='M4.53 12.24a.75.75 0 0 1-.039 1.06l-2.639 2.45 2.64 2.45a.75.75 0 1 1-1.022 1.1l-3.23-3a.75.75 0 0 1 0-1.1l3.23-3a.75.75 0 0 1 1.06.04Zm3.979 1.06a.75.75 0 1 1 1.02-1.1l3.231 3a.75.75 0 0 1 0 1.1l-3.23 3a.75.75 0 1 1-1.021-1.1l2.639-2.45-2.64-2.45Z'></path>
+          </svg>
+        </div>
       </label>
       <div style='overflow-wrap: break-word;'>
-        <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer'>
-        <span class='b'>{{ $asset.Name }} loremipsumdolorsitamet</span>
-        <a href=''>edit</a>
-        <a href=''>rename</a>
-        <button>cut</button>
-        <button>copy</button>
-        <button>delete</button>
+        <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
+        <a href='' class='dib mr2 mb2'>edit</a>
+        <a href='' class='dib mr2 mb2'>rename</a>
+        <button class='button ba br2 pa2 mr2 mb2'>cut</button>
+        <button class='button ba br2 pa2 mr2 mb2'>copy</button>
+        <button class='button-danger ba br2 b--dark-red pa2 mr2 mb2'>delete</button>
       </div>
       {{- end }}
       {{- if eq (ext $asset.Name) ".css" ".js" ".md" }}
