--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -97,7 +97,7 @@
           {{- else }}
           <option{{ if eq $.Ext ".css" }} selected{{ end }}>.css</option>
           <option{{ if eq $.Ext ".js" }} selected{{ end }}>.js</option>
-          <option{{ if eq $.Ext ".js" }} selected{{ end }}>.md</option>
+          <option{{ if eq $.Ext ".md" }} selected{{ end }}>.md</option>
           {{- end }}
         {{- end }}
       </select>
