--- a/embed/file.html
+++ b/embed/file.html
@@ -95,6 +95,18 @@
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
 {{- end }}
+{{- if eq (index $.PostRedirectGet "from") "delete" }}
+<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+  {{- $numDeleted := index $.PostRedirectGet "numDeleted" }}
+  {{- $numErrors := index $.PostRedirectGet "numErrors" }}
+  <div class='flex items-center'>
+    {{ template "heroicons-trash" }}
+    <span class='ml2'>{{ $numDeleted }} file{{ if ne $numDeleted 1.0 }}s{{ end }} deleted {{ if $numErrors }}({{ $numErrors }} error{{ if ne $numErrors 1.0 }}s{{ end }}){{ end }}</span>
+  </div>
+  <div class='flex-grow-1'></div>
+  <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
+</div>
+{{- end }}
 {{- if gt (len $clipboard) 0 }}
 <div class='dashed-border mv2 pa2 br2 flex items-center'>
   <div class='flex-grow-1 truncate'>
@@ -230,105 +242,63 @@
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>save</button>
 </form>
 {{- if eq (head $.FilePath) "pages" "posts" }}
-<div class='flex items-center'>
-  {{- if eq (head $.FilePath) "pages" }}
-  <span class='b'>Assets</span>
-  <div class='ma2'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join "output" (trimSuffix (tail $.FilePath) ".html") }}' class='nowrap'>create file</a></div>
-  {{- else }}
-  <span class='b'>Images</span>
-  {{- end }}
-</div>
-  {{- if $.Assets }}
-  <ul class='grid grid-cols-auto-150px grid-gap-3 mv2'>
-    {{- range $asset := $.Assets }}
-    <li class='h-100'>
-      {{- if eq (ext $asset.Name) ".jpeg" ".jpg" ".png" ".webp" ".gif" }}
-      <label class='pointer' style='display: block; position: relative;' data-disable-click-selection>
-        <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer' style='position: absolute; top: 4px; left: 4px;'>
-        <img src='{{ imgURL $asset }}' class='w-100' loading='lazy'>
-      </label>
-      <div style='overflow-wrap: break-word;'>
-        <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
-        <a href='' class='dib mr2 mb2'>view</a>
-        <a href='' class='dib mr2 mb2'>rename</a>
-        <button class='button ba br2 pa2 mr2 mb2'>cut</button>
-        <button class='button ba br2 pa2 mr2 mb2'>copy</button>
-        <button class='button-danger ba br2 b--dark-red pa2 mr2 mb2'>delete</button>
-      </div>
-      {{- else }}
-      <label class='pointer' style='display: block; position: relative;' data-disable-click-selection>
-        <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer' style='position: absolute; top: 4px; left: 4px;'>
-        <div class='flex justify-center pv4'>
-          <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='50' height='50'>
-            <path d='M3 3a2 2 0 0 1 2-2h9.982a2 2 0 0 1 1.414.586l4.018 4.018A2 2 0 0 1 21 7.018V21a2 2 0 0 1-2 2H4.75a.75.75 0 0 1 0-1.5H19a.5.5 0 0 0 .5-.5V8.5h-4a2 2 0 0 1-2-2v-4H5a.5.5 0 0 0-.5.5v6.25a.75.75 0 0 1-1.5 0Zm12-.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 0-.146-.336l-4.018-4.018A.5.5 0 0 0 15 2.5Z'></path>
-            <path d='M4.53 12.24a.75.75 0 0 1-.039 1.06l-2.639 2.45 2.64 2.45a.75.75 0 1 1-1.022 1.1l-3.23-3a.75.75 0 0 1 0-1.1l3.23-3a.75.75 0 0 1 1.06.04Zm3.979 1.06a.75.75 0 1 1 1.02-1.1l3.231 3a.75.75 0 0 1 0 1.1l-3.23 3a.75.75 0 1 1-1.021-1.1l2.639-2.45-2.64-2.45Z'></path>
-          </svg>
-        </div>
-      </label>
-      <div style='overflow-wrap: break-word;'>
-        <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
-        <a href='' class='dib mr2 mb2'>edit</a>
-        <a href='' class='dib mr2 mb2'>rename</a>
-        <button class='button ba br2 pa2 mr2 mb2'>cut</button>
-        <button class='button ba br2 pa2 mr2 mb2'>copy</button>
-        <button class='button-danger ba br2 b--dark-red pa2 mr2 mb2'>delete</button>
-      </div>
-      {{- end }}
-      {{- if eq (ext $asset.Name) ".css" ".js" ".md" }}
-      <!-- <div class='tc'> -->
-      <!--   <a href='/{{ join "files" $.SitePrefix $.AssetDir $asset.Name }}'>edit</a> -->
-      <!-- </div> -->
-      {{- else }}
-      <!-- <div class='tc'> -->
-      <!--   <a href='/{{ join "files" $.SitePrefix $.AssetDir $asset.Name }}'>view</a> -->
-      <!-- </div> -->
-      {{- end }}
-      <!-- <div class='flex items-center'> -->
-      <!--   <div class='mr2'><input id='{{ $asset.Name }}' type='checkbox' class='pointer'></div> -->
-      <!--   <label for='{{ $asset.Name }}' class='b'>{{ $asset.Name }}</label> -->
-      <!--   <span class='ml1 f6 mid-gray nowrap'>{{ fileSizeToString $asset.Size }}</span> -->
-      <!--   <details class='ml2 relative' data-autoclose-details> -->
-      <!--     <summary role='button' class='flex items-center button ba br2 b--black hide-marker ph1 pointer' data-disable-click-selection> -->
-      <!--       {{ template "octicons-triangle-down" }} -->
-      <!--     </summary> -->
-      <!--     <div class='absolute bg-white br2' style='top: calc(1rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'> -->
-      <!--       <div class='ma2 tr'><a href=''>rename</a></div> -->
-      <!--       <div class='ma2'><button type='submit' formmethod='post' formaction='' name='name' value='' class='button ba br2 pa2 w-100'>insert</button></div> -->
-      <!--       <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 w-100'>cut</button></div> -->
-      <!--       <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/copy" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 w-100'>copy</button></div> -->
-      <!--       <div class='ma2'><button type='submit' formmethod='get' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $asset.Name }}' class='button-danger ba br2 b--dark-red pa2 w-100'>delete</button></div> -->
-      <!--     </div> -->
-      <!--   </details> -->
-      <!-- </div> -->
-    </li>
+  <div class='flex items-center'>
+    {{- if eq (head $.FilePath) "pages" }}
+    <span class='b'>Assets</span>
+    <div class='ma2'><a href='/{{ join "files" $.SitePrefix "createfile" }}/?parent={{ join "output" (trimSuffix (tail $.FilePath) ".html") }}' class='nowrap'>create file</a></div>
+    {{- else }}
+    <span class='b'>Images</span>
     {{- end }}
-  </ul>
+  </div>
+  {{- if $.Assets }}
+  <form>
+    <input type='hidden' name='parent' value='{{ $.AssetDir }}'>
+    <ul class='grid grid-cols-auto-150px grid-gap-3 mv2'>
+      {{- range $asset := $.Assets }}
+      <li class='h-100'>
+        {{- if eq (ext $asset.Name) ".jpeg" ".jpg" ".png" ".webp" ".gif" }}
+        <label class='pointer' style='display: block; position: relative;' data-disable-click-selection>
+          <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer' style='position: absolute; top: 4px; left: 4px;'>
+          <img src='{{ imgURL $asset }}' class='w-100' loading='lazy'>
+        </label>
+        <div style='overflow-wrap: break-word;'>
+          <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
+          <a href='/{{ join $.SitePrefix $.AssetDir $asset.Name }}' class='dib mr2 mb2'>view</a>
+          <a href='' class='dib mr2 mb2'>rename</a>
+          <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>cut</button>
+          <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>copy</button>
+          <button type='submit' formmethod='get' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $asset.Name }}' class='button-danger ba br2 b--dark-red pa2 mr2 mb2'>delete</button>
+        </div>
+        {{- else }}
+        <label class='pointer' style='display: block; position: relative;' data-disable-click-selection>
+          <input type='checkbox' id='{{ $asset.Name }}' name='name' value='{{ $asset.Name }}' class='pointer' style='position: absolute; top: 4px; left: 4px;'>
+          <div class='flex justify-center pv4'>
+            <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='50' height='50'>
+              <path d='M3 3a2 2 0 0 1 2-2h9.982a2 2 0 0 1 1.414.586l4.018 4.018A2 2 0 0 1 21 7.018V21a2 2 0 0 1-2 2H4.75a.75.75 0 0 1 0-1.5H19a.5.5 0 0 0 .5-.5V8.5h-4a2 2 0 0 1-2-2v-4H5a.5.5 0 0 0-.5.5v6.25a.75.75 0 0 1-1.5 0Zm12-.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 0-.146-.336l-4.018-4.018A.5.5 0 0 0 15 2.5Z'></path>
+              <path d='M4.53 12.24a.75.75 0 0 1-.039 1.06l-2.639 2.45 2.64 2.45a.75.75 0 1 1-1.022 1.1l-3.23-3a.75.75 0 0 1 0-1.1l3.23-3a.75.75 0 0 1 1.06.04Zm3.979 1.06a.75.75 0 1 1 1.02-1.1l3.231 3a.75.75 0 0 1 0 1.1l-3.23 3a.75.75 0 1 1-1.021-1.1l2.639-2.45-2.64-2.45Z'></path>
+            </svg>
+          </div>
+        </label>
+        <div style='overflow-wrap: break-word;'>
+          <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
+          <a href='/{{ join $.SitePrefix $.AssetDir $asset.Name }}' class='dib mr2 mb2'>edit</a>
+          <a href='' class='dib mr2 mb2'>rename</a>
+          <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>cut</button>
+          <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>copy</button>
+          <button type='submit' formmethod='get' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $asset.Name }}' class='button-danger ba br2 b--dark-red pa2 mr2 mb2'>delete</button>
+        </div>
+        {{- end }}
+      </li>
+      {{- end }}
+    </ul>
+  <form>
   {{- else }}
   <div class='mv2 tc'>{{ if eq (head $.FilePath) "posts" }}- No images -{{ else }}- No assets -{{ end }}</div>
   {{- end }}
 {{- end }}
 
-{{- define "octicons-file-code" }}
-<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'>
-  <path d='M3 3a2 2 0 0 1 2-2h9.982a2 2 0 0 1 1.414.586l4.018 4.018A2 2 0 0 1 21 7.018V21a2 2 0 0 1-2 2H4.75a.75.75 0 0 1 0-1.5H19a.5.5 0 0 0 .5-.5V8.5h-4a2 2 0 0 1-2-2v-4H5a.5.5 0 0 0-.5.5v6.25a.75.75 0 0 1-1.5 0Zm12-.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 0-.146-.336l-4.018-4.018A.5.5 0 0 0 15 2.5Z'></path>
-  <path d='M4.53 12.24a.75.75 0 0 1-.039 1.06l-2.639 2.45 2.64 2.45a.75.75 0 1 1-1.022 1.1l-3.23-3a.75.75 0 0 1 0-1.1l3.23-3a.75.75 0 0 1 1.06.04Zm3.979 1.06a.75.75 0 1 1 1.02-1.1l3.231 3a.75.75 0 0 1 0 1.1l-3.23 3a.75.75 0 1 1-1.021-1.1l2.639-2.45-2.64-2.45Z'></path>
-</svg>
-{{- end }}
-
-{{- define "heroicons-ellipsis-horizontal" }}
-<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='none' viewBox='0 0 24 24'>
-  <path d='M5 12H5.01M12 12H12.01M19 12H19.01M6 12C6 12.5523 5.55228 13 5 13C4.44772 13 4 12.5523 4 12C4 11.4477 4.44772 11 5 11C5.55228 11 6 11.4477 6 12ZM13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12ZM20 12C20 12.5523 19.5523 13 19 13C18.4477 13 18 12.5523 18 12C18 11.4477 18.4477 11 19 11C19.5523 11 20 11.4477 20 12Z' stroke='#4A5568' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'/>
-</svg>
-{{- end }}
-
-{{- define "octicons-triangle-down" }}
-<svg aria-hidden='true' height='16' viewBox='0 0 16 16' version='1.1' width='16' data-view-component='true' class='octicon octicon-triangle-down'>
-  <path d='m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z'></path>
-</svg>
-{{- end }}
-
-{{- define "octicons-plus" }}
-<svg aria-hidden='true' height='16' viewBox='0 0 16 16' version='1.1' width='16' data-view-component='true' class='octicon octicon-plus'>
-  <path d='M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z'></path>
+{{- define "heroicons-trash" }}
+<svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor'  width='16' height='16'>
+  <path stroke-linecap='round' stroke-linejoin='round' d='m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0' />
 </svg>
 {{- end }}
