--- a/embed/file.html
+++ b/embed/file.html
@@ -263,7 +263,7 @@
         </label>
         <div style='overflow-wrap: break-word;'>
           <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
-          <a href='/{{ join $.SitePrefix $.AssetDir $asset.Name }}' class='dib mr2 mb2'>view</a>
+          <a href='/{{ join "files" $.SitePrefix $.AssetDir $asset.Name }}' class='dib mr2 mb2'>view</a>
           <a href='' class='dib mr2 mb2'>rename</a>
           <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>cut</button>
           <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/copy" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>copy</button>
@@ -281,7 +281,7 @@
         </label>
         <div style='overflow-wrap: break-word;'>
           <span class='b mr2 mb2'>{{ $asset.Name }} loremipsumdolorsitamet</span>
-          <a href='/{{ join $.SitePrefix $.AssetDir $asset.Name }}' class='dib mr2 mb2'>edit</a>
+          <a href='/{{ join "files" $.SitePrefix $.AssetDir $asset.Name }}' class='dib mr2 mb2'>edit</a>
           <a href='' class='dib mr2 mb2'>rename</a>
           <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>cut</button>
           <button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $asset.Name }}' class='button ba br2 pa2 mr2 mb2'>copy</button>
