--- a/embed/directory.html
+++ b/embed/directory.html
@@ -124,16 +124,13 @@
 {{- $names := index $clipboard "name" }}
 <div class='dashed-border mv2 pa2 br2 flex items-center'>
   <div class='flex-grow-1 truncate'>
-    output/themes
-    output/posts then join "files" $srcSitePrefix (trimSuffix (tail $srcParent) ".md")
-    output/* then join "files" $srcSitePrefix (trimSuffix (tail (tail $srcParent)) ".html")
     {{- if eq (head $srcParent) "output" }}
       {{- if eq (head (tail $srcParent)) "themes" }}
       <a href='/{{ join "files" $srcSitePrefix $srcParent }}/'>{{ len $names }} file{{ if ne (len $names) 1 }}s{{ end }} {{ if $clipboard.Has "cut" }}cut{{ else }}copied{{ end }}</a>: {{ range $i, $name := $names }}{{ if $i }}, {{ end }}{{ $name }}{{ end }}
       {{- else if eq (head (tail $srcParent)) "posts" }}
-      <a href='/{{ join "files" $srcSitePrefix (trimSuffix (tail $srcParent) ".md") }}/'>{{ len $names }} file{{ if ne (len $names) 1 }}s{{ end }} {{ if $clipboard.Has "cut" }}cut{{ else }}copied{{ end }}</a>: {{ range $i, $name := $names }}{{ if $i }}, {{ end }}{{ $name }}{{ end }}
+      <a href='/{{ join "files" $srcSitePrefix (tail $srcParent) }}.md'>{{ len $names }} file{{ if ne (len $names) 1 }}s{{ end }} {{ if $clipboard.Has "cut" }}cut{{ else }}copied{{ end }}</a>: {{ range $i, $name := $names }}{{ if $i }}, {{ end }}{{ $name }}{{ end }}
       {{- else }}
-      <a href='/{{ join "files" $srcSitePrefix (trimSuffix (tail (tail $srcParent)) ".html) }}/'>{{ len $names }} file{{ if ne (len $names) 1 }}s{{ end }} {{ if $clipboard.Has "cut" }}cut{{ else }}copied{{ end }}</a>: {{ range $i, $name := $names }}{{ if $i }}, {{ end }}{{ $name }}{{ end }}
+      <a href='/{{ join "files" $srcSitePrefix (tail (tail $srcParent)) }}.html'>{{ len $names }} file{{ if ne (len $names) 1 }}s{{ end }} {{ if $clipboard.Has "cut" }}cut{{ else }}copied{{ end }}</a>: {{ range $i, $name := $names }}{{ if $i }}, {{ end }}{{ $name }}{{ end }}
       {{- end }}
     {{- else }}
     <a href='/{{ join "files" $srcSitePrefix $srcParent }}/'>{{ len $names }} file{{ if ne (len $names) 1 }}s{{ end }} {{ if $clipboard.Has "cut" }}cut{{ else }}copied{{ end }}</a>: {{ range $i, $name := $names }}{{ if $i }}, {{ end }}{{ $name }}{{ end }}
