--- a/embed/file.html
+++ b/embed/file.html
@@ -21,31 +21,80 @@
 </nav>
 {{- if eq (index $.PostRedirectGet "from") "createfile" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-  {{- if eq (head $.FilePath) "pages" }}
-  <div>created page</div>
-  {{- else if eq (head $.FilePath) "posts" }}
-  <div>created post</div>
-  {{- else }}
-  <div>created file</div>
-  {{- end }}
+  <div>
+    {{- if eq (head $.FilePath) "pages" }}
+    <div>created page</div>
+    {{- else if eq (head $.FilePath) "posts" }}
+    <div>created post</div>
+    {{- else }}
+    <div>created file</div>
+    {{- end }}
+    {{- if $.FilesTooBig }}
+    <br>
+    <div>
+      The following files were not uploaded because they are too big (max 10 MB per file):
+      <ul class='list-style-disc ph3'>
+        {{- range $name := $.FilesTooBig }}
+        <li>{{ $name }}</li>
+        {{- end }}
+      </ul>
+    </div>
+    {{- end }}
+  </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
 {{- end }}
-{{- if eq (index $.PostRedirectGet "from") "files" }}
+{{- if eq (index $.PostRedirectGet "from") "file" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-  {{- if eq (head $.FilePath) "pages" }}
-  <div>saved page</div>
-  {{- else if eq (head $.FilePath) "posts" }}
-  <div>saved post</div>
-  {{- else }}
-  <div>saved file</div>
-  {{- end }}
+  <div>
+    {{- if eq (head $.FilePath) "pages" }}
+    <div>saved page</div>
+    {{- else if eq (head $.FilePath) "posts" }}
+    <div>saved post</div>
+    {{- else }}
+    <div>saved file</div>
+    {{- end }}
+    {{- if $.FilesExist }}
+    <br>
+    <div>
+      The following files were not uploaded because a destination file already exists:
+      <ul class='list-style-disc ph3'>
+        {{- range $name := $.FilesExist }}
+        <li>{{ $name }}</li>
+        {{- end }}
+      </ul>
+    </div>
+    {{- end }}
+    {{- if $.FilesTooBig }}
+    <br>
+    <div>
+      The following files were not uploaded because they are too big (max 10 MB per file):
+      <ul class='list-style-disc ph3'>
+        {{- range $name := $.FilesTooBig }}
+        <li>{{ $name }}</li>
+        {{- end }}
+      </ul>
+    </div>
+    {{- end }}
+  </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
 {{- end }}
-{{- if eq (index $.PostRedirectGet "from") "paste" }}
+{{- if eq (index $.PostRedirectGet "from") "delete" }}
+<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+  {{- $numDeleted := index $.PostRedirectGet "numDeleted" }}
+  {{- $numErrors := index $.PostRedirectGet "numErrors" }}
+  <div class='flex items-center'>
+    {{ template "heroicons-trash" }}
+    <span class='ml2'>{{ $numDeleted }} file{{ if ne $numDeleted 1.0 }}s{{ end }} deleted {{ if $numErrors }}({{ $numErrors }} error{{ if ne $numErrors 1.0 }}s{{ end }}){{ end }}</span>
+  </div>
+  <div class='flex-grow-1'></div>
+  <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
+</div>
+{{- end }}
+{{- if eq (index $.PostRedirectGet "from") "clipboard/paste" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   {{- $error := index $.PostRedirectGet "error" }}
   {{- if $error }}
@@ -91,18 +140,6 @@
       {{- end }}
     </div>
   {{- end }}
-  <div class='flex-grow-1'></div>
-  <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
-</div>
-{{- end }}
-{{- if eq (index $.PostRedirectGet "from") "delete" }}
-<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
-  {{- $numDeleted := index $.PostRedirectGet "numDeleted" }}
-  {{- $numErrors := index $.PostRedirectGet "numErrors" }}
-  <div class='flex items-center'>
-    {{ template "heroicons-trash" }}
-    <span class='ml2'>{{ $numDeleted }} file{{ if ne $numDeleted 1.0 }}s{{ end }} deleted {{ if $numErrors }}({{ $numErrors }} error{{ if ne $numErrors 1.0 }}s{{ end }}){{ end }}</span>
-  </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
