--- a/embed/directory.html
+++ b/embed/directory.html
@@ -153,6 +153,20 @@
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
 {{- end }}
+{{- if eq (index $.PostRedirectGet "from") "rename" }}
+<div role='alert' class='alert mv2 pa2 br2 flex items-start'>
+  {{ $parent := index $.PostRedirectGet "parent" }}
+  {{ $ext := index $.PostRedirectGet "ext" }}
+  {{ $oldName := index $.PostRedirectGet "oldName" }}
+  {{ $newName := index $.PostRedirectGet "newName" }}
+  {{ $isDir := index $.PostRedirectGet "isDir" }}
+  <div class='flex items-center'>
+    <div>renamed {{ $oldName }}{{ $ext }}{{ if $isDir}}/{{ end }} =&gt; <a href='/{{ join "files" $.SitePrefix $parent $oldName }}{{ $ext }}{{ if $isDir }}/{{ end }}'>{{ $newName }}{{ $ext }}{{ if $isDir}}/{{ end }}</a></div>
+  </div>
+  <div class='flex-grow-1'></div>
+  <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
+</div>
+{{- end }}
 {{- if len $clipboard }}
 {{- $srcSitePrefix := $clipboard.Get "sitePrefix" }}
 {{- $srcParent := $clipboard.Get "parent" }}
@@ -344,7 +358,7 @@
             {{ template "octicons-triangle-down" }}
           </summary>
           <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-            <div class='ma2 tc'><a href='/{{ join "files" $.SitePrefix "rename" }}/?parent={{ $.FilePath }}&oldName={{ $file.Name }}'>rename</a></div>
+            <div class='ma2 tc'><a href='/{{ join "files" $.SitePrefix "rename" }}/?parent={{ $.FilePath }}&ext={{ ext $file.Name }}&oldName={{ trimSuffix $file.Name (ext $file.Name) }}'>rename</a></div>
             <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>cut</button></div>
             <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/copy" }}/' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>copy</button></div>
             <div class='ma2'><button type='submit' formmethod='get' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $file.Name }}' class='button-danger ba br2 b--dark-red pa2 w-100'>delete</button></div>
