--- a/embed/directory.html
+++ b/embed/directory.html
@@ -156,12 +156,11 @@
 {{- if eq (index $.PostRedirectGet "from") "rename" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-start'>
   {{ $parent := index $.PostRedirectGet "parent" }}
-  {{ $ext := index $.PostRedirectGet "ext" }}
   {{ $oldName := index $.PostRedirectGet "oldName" }}
   {{ $newName := index $.PostRedirectGet "newName" }}
   {{ $isDir := index $.PostRedirectGet "isDir" }}
   <div class='flex items-center'>
-    <div>renamed {{ $oldName }}{{ $ext }}{{ if $isDir}}/{{ end }} =&gt; <a href='/{{ join "files" $.SitePrefix $parent $oldName }}{{ $ext }}{{ if $isDir }}/{{ end }}'>{{ $newName }}{{ $ext }}{{ if $isDir}}/{{ end }}</a></div>
+    <div>renamed {{ $oldName }}{{ if $isDir }}/{{ end }} =&gt; <a href='/{{ join "files" $.SitePrefix $parent $newName }}{{ if $isDir }}/{{ end }}'>{{ $newName }}{{ if $isDir}}/{{ end }}</a></div>
   </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
@@ -359,7 +358,7 @@
           </summary>
           <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
             {{- if not (eq (join $.FilePath $file.Name) "pages/index.html" "pages/404.html" "output/themes/post.html" "output/themes/postlist.html") }}
-            <div class='ma2 tc'><a href='/{{ join "files" $.SitePrefix "rename" }}/?parent={{ $.FilePath }}&ext={{ ext $file.Name }}&oldName={{ trimSuffix $file.Name (ext $file.Name) }}'>rename</a></div>
+            <div class='ma2 tc'><a href='/{{ join "files" $.SitePrefix "rename" }}/?parent={{ $.FilePath }}&oldName={{ $file.Name }}'>rename</a></div>
             {{- end }}
             <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>cut</button></div>
             <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/copy" }}/' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>copy</button></div>
