--- a/embed/rename.html
+++ b/embed/rename.html
@@ -32,19 +32,19 @@
   <div><a href='/{{ join "files" $.SitePrefix $.Parent }}/'>&larr; back</a></div>
   {{- end }}
   <h1 class='f3 mv3 b'>
-    Rename <a href='/{{ join "files" $.SitePrefix $.Parent $.OldName }}{{ $.Ext }}{{ if $.IsDir }}/{{ end }}'>{{ $.OldName }}{{ $.Ext }}{{ if $.IsDir }}/{{ end }}</a>
+    Rename <a href='/{{ join "files" $.SitePrefix $.Parent }}/{{ $.Prefix }}{{ $.From }}{{ $.Ext }}{{ if $.IsDir }}/{{ end }}'>{{ $.Prefix }}{{ $.From }}{{ $.Ext }}{{ if $.IsDir }}/{{ end }}</a>
   </h1>
   <input type='hidden' name='parent' value='{{ $.Parent }}'>
-  <input type='hidden' name='ext' value='{{ $.Ext }}'>
+  <input type='hidden' name='name' value='{{ $.Prefix }}{{ $.From }}{{ $.Ext }}'>
   <div class='mv3'>
-    <div><label for='oldName' class='b'>Old Name:</label></div>
-    <input id='oldName' name='oldName' value='{{ $.OldName }}' class='pv1 ph2 br2 ba w-100 bg-near-white' autocomplete='on' readonly>
+    <div>Old Name:</div>
+    <input value='{{ $.From }}' class='pv1 ph2 br2 ba w-100 bg-near-white' autocomplete='on' disabled>
   </div>
   <div class='mv3'>
-    <div><label for='newName' class='b'>New Name:</label></div>
-    <input id='newName' name='newName' value='{{ $.NewName }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "newName" }} b--invalid-red{{ end }}' autocomplete='on' required autofocus>
+    <div><label for='newsubname' class='b'>New Name:</label></div>
+    <input id='to' name='to' value='{{ $.To }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "to" }} b--invalid-red{{ end }}' autocomplete='on' required autofocus>
     <ul class='list-style-disc ph3 f6 invalid-red'>
-      {{- range $error := index $.FormErrors "newName" }}
+      {{- range $error := index $.FormErrors "to" }}
       <li>{{ $error }}</li>
       {{- end }}
     </ul>
