--- a/embed/directory.html
+++ b/embed/directory.html
@@ -358,7 +358,7 @@
           </summary>
           <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
             {{- if not (eq (join $.FilePath $file.Name) "pages/index.html" "pages/404.html" "output/themes/post.html" "output/themes/postlist.html") }}
-            <div class='ma2 tc'><a href='/{{ join "files" $.SitePrefix "rename" }}/?parent={{ $.FilePath }}&oldName={{ $file.Name }}'>rename</a></div>
+            <div class='ma2 tc'><a href='/{{ join "files" $.SitePrefix "rename" }}/?parent={{ $.FilePath }}&name={{ $file.Name }}'>rename</a></div>
             {{- end }}
             <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/cut" }}/' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>cut</button></div>
             <div class='ma2'><button type='submit' formmethod='post' formaction='/{{ join "files" $.SitePrefix "clipboard/copy" }}/' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>copy</button></div>
