--- a/embed/rename.html
+++ b/embed/rename.html
@@ -38,11 +38,19 @@
   <input type='hidden' name='name' value='{{ $.Prefix }}{{ $.From }}{{ $.Ext }}'>
   <div class='mv3'>
     <div>Old Name:</div>
-    {{ $.Prefix }}<input value='{{ $.From }}' class='pv1 ph2 br2 ba w-100 bg-near-white' autocomplete='on' disabled>{{ $.Ext }}
+    <div class='flex items-center'>
+      {{ if $.Prefix }}<span class='mr2'>{{ $.Prefix }}</span>{{ end }}
+      <input value='{{ $.From }}' class='pv1 ph2 br2 ba w-100 bg-near-white' autocomplete='on' disabled>
+      {{ if $.Ext }}<span class='ml2'>{{ $.Ext }}<span>{{ end }}
+    </div>
   </div>
   <div class='mv3'>
-    <div><label for='newsubname' class='b'>New Name:</label></div>
-    {{ $.Prefix }}<input id='to' name='to' value='{{ $.To }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "to" }} b--invalid-red{{ end }}' autocomplete='on' required autofocus>{{ $.Ext }}
+    <div><label for='to' class='b'>New Name:</label></div>
+    <div class='flex items-center'>
+      {{ if $.Prefix }}<span class='mr2'>{{ $.Prefix }}</span>{{ end }}
+      <input id='to' name='to' value='{{ $.To }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "to" }} b--invalid-red{{ end }}' autocomplete='on' required autofocus>
+      {{ if $.Ext }}<span class='ml2'>{{ $.Ext }}<span>{{ end }}
+    </div>
     <ul class='list-style-disc ph3 f6 invalid-red'>
       {{- range $error := index $.FormErrors "to" }}
       <li>{{ $error }}</li>
