--- a/embed/rename.html
+++ b/embed/rename.html
@@ -37,7 +37,7 @@
   <input type='hidden' name='parent' value='{{ $.Parent }}'>
   <input type='hidden' name='name' value='{{ $.Prefix }}{{ $.From }}{{ $.Ext }}'>
   <div class='mv3'>
-    <div>Old Name:</div>
+    <div class='b'>Old Name:</div>
     <div class='flex items-center'>
       {{ if $.Prefix }}<span class='mr2'>{{ $.Prefix }}</span>{{ end }}
       <input value='{{ $.From }}' class='pv1 ph2 br2 ba w-100 bg-near-white' autocomplete='on' disabled>
