--- a/embed/rootdirectory.html
+++ b/embed/rootdirectory.html
@@ -110,7 +110,7 @@
         {{ template "octicons-triangle-down" }}
       </summary>
       <form method='get' action='/{{ join "files" $.SitePrefix "search" }}/' class='absolute bg-white br2 pa2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-        <input name='text' placeholder='search this folder' class='pa2 br2 ba'>
+        <input name='term' placeholder='search this folder' class='pa2 br2 ba'>
         <button type='submit' class='button ba br2 pa2 w-100 mt2'>search</button>
       </form>
     </details>
