--- a/embed/search.html
+++ b/embed/search.html
@@ -5,7 +5,7 @@
 <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 10 10%22><text y=%221em%22 font-size=%228%22>☕</text></svg>'>
 <style>{{ stylesCSS }}</style>
 <script type='module'>{{ baselineJS }}</script>
-<title>{{ if $.Text }}"{{ $.Text }}"{{ else }}search{{ end }}</title>
+<title>{{ if $.Term }}"{{ $.Term }}"{{ else }}search{{ end }}</title>
 <body class='centered-body'>
 <nav class='mv2 bg-dark-cyan white flex flex-wrap items-center'>
   <a href='/files/' class='ma2 white'>🖋️☕ notebrew</a>
@@ -30,11 +30,11 @@
   <h1 class='f3 mv3 b'>Search</h1>
   {{- end }}
   <div class='mv3'>
-    <div><label for='text' class='b'>Text:</label></div>
-    <input id='text' name='text' value='{{ $.Text }}' placeholder='search text' class='pv1 ph2 br2 ba w-100' autocomplete='on' required>
+    <div><label for='term' class='b'>Term:</label></div>
+    <input id='term' name='term' value='{{ $.Term }}' placeholder='search term' class='pv1 ph2 br2 ba w-100' autocomplete='on' required>
   </div>
   <div class='mv3'>
-    <div><label for='text' class='b'>Extensions (leave blank to select all):</label></div>
+    <div class='b'>Extensions (leave blank to select all):</div>
     <div class='flex items-center'>
       <input id='ext.html' type='checkbox' name='ext' value='.html' class='pointer'{{ if hasExt ".html" }} checked{{ end }}>
       <label for='ext.html' class='mr3 pointer'>.html</label>
@@ -49,8 +49,8 @@
     </div>
   </div>
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>search</button>
-  {{- if $.Text }}
-  <h2><i>"{{ $.Text }}"</i></h2>
+  {{- if $.Term }}
+  <h2><i>"{{ $.Term }}"</i></h2>
   {{- end }}
 </form>
 {{- if $.Matches }}
@@ -66,7 +66,7 @@
   {{- end }}
 </ul>
 {{- else }}
-  {{- if $.Text }}
+  {{- if $.Term }}
   <div class='mv2 tc'>- No matches -</div>
   {{- end }}
 {{- end }}
